--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<i class="far fa-code-branch"></i>
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -21,7 +22,7 @@
 					<header id="header">
 						<div class="logo">
 							<!-- <span class="icon fa-gem"></span> -->
-							<i class="far fa-code-branch"></i>
+							<span class="far fa-code-branch"></span>
 						</div>
 						<div class="content">
 							<div class="inner">
