--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<header id="header">
 						<div class="logo">
 							<!-- <span class="icon fa-gem"></span> -->
-							<span class="far fa-code-branch"></span>
+							<span class="icon fa-code-branch"></span>
 						</div>
 						<div class="content">
 							<div class="inner">
