--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<i class="far fa-code-branch"></i>
+
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -21,8 +21,8 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<!-- <span class="icon fa-gem"></span> -->
-							<span class="icon fa-code-branch"></span>
+							<span class="icon fa-gem"></span>
+							<!-- <span class="icon fa-code-branch"></span> -->
 						</div>
 						<div class="content">
 							<div class="inner">
