--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<!-- <span class="icon fa-gem"></span> -->
-							<span class="fa fa-code"></span>
+							<span class="fa fa-code-branch"></span>
 						</div>
 						<div class="content">
 							<div class="inner">
