--- a/index.html
+++ b/index.html
@@ -10,11 +10,6 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<style>
-			body {
-			  background-image: url('background.jpg');
-			}
-		</style>
 		
 
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
@@ -357,7 +352,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			</div>
 
 		<!-- BG -->
-			<div id="bg"></div>
+			<div id="background"></div>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
