--- a/index.html
+++ b/index.html
@@ -61,6 +61,12 @@
 								<p>
 									A collection of interactive Heroku dashboards
 								</p>
+
+								<h2 class="major">Jupyter Notebooks</h2>
+								<span class="image main"><img src="images/background.jpg" alt="" /></span>
+								<p>
+									A collection of Jupyter Notebooks that I have created over the years
+								</p>
 							</article>
 
 						<!-- About -->
