--- a/index.html
+++ b/index.html
@@ -56,18 +56,33 @@
 
 						<!-- Work -->
 							<article id="work">
+								<!-- Dashboards -->
 								<h2 class="major">Dashboards</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 								<p>
 									A collection of interactive Heroku dashboards
 								</p>
-
+								
+								<!-- Jupyter Notebooks -->
 								<h2 class="major">Jupyter Notebooks</h2>
 								<span class="image main"><img src="images/background.jpg" alt="" /></span>
 								<p>
 									A collection of Jupyter Notebooks that I have created over the years
 								</p>
+
 							</article>
+
+							<!-- Dashboards -->
+								<article id="dashboards">
+									<h2 class="major">Interactive Baseball Data</h2>
+									<span class="image main">
+										<a href="https://rocky-shelf-43279.herokuapp.com/"></a>
+										<img src="images/baseball_data.jpg" alt="" />
+									</span>
+									<p>
+										Interactive data modeling of MLB players' salaries over the years. Based on percentiles.
+									</p>
+								</article>
 
 						<!-- About -->
 							<article id="about">
