--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 							<article id="work">
 								<!-- Dashboards -->
 								<h2 class="major">Dashboards</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+								<span class="image main"><a href="#dashboards"></a><img src="images/pic02.jpg" alt="" /></span>
 								<p>
 									A collection of interactive Heroku dashboards
 								</p>
