--- a/index.html
+++ b/index.html
@@ -80,8 +80,9 @@
 								<article id="dashboards">
 									<h2 class="major">Interactive Baseball Data</h2>
 									<span class="image main">
-										<a href="https://rocky-shelf-43279.herokuapp.com/"></a>
-										<img src="images/baseball_data.jpg" alt="" />
+										<a href="https://rocky-shelf-43279.herokuapp.com/">
+											<img src="images/baseball_data.jpg" alt="" />
+										</a>
 									</span>
 									<p>
 										Interactive data modeling of MLB players' salaries over the years. Based on percentiles.
