--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 							<article id="intro">
 								<h2 class="major">Introduction</h2>
 								<span class="image main">
-									<img src="images/pic01.jpg" alt="" />
+									<img src="images/bentley.jpg" alt="" />
 								</span>
 								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
@@ -60,7 +60,7 @@
 								<h2 class="major">Dashboards</h2>
 								<span class="image main">
 									<a href="#dashboards">
-										<img src="images/pic02.jpg" alt="" />
+										<img src="images/dashboards/dash_example.png" alt="" />
 									</a>
 								</span>
 								<p>
@@ -69,7 +69,7 @@
 								
 								<!-- Jupyter Notebooks -->
 								<h2 class="major">Jupyter Notebooks</h2>
-								<span class="image main"><img src="images/background.jpg" alt="" /></span>
+								<span class="image main"><img src="images/jupyter_books/jupyter_example.jpg" alt="" /></span>
 								<p>
 									A collection of Jupyter Notebooks that I have created over the years
 								</p>
@@ -92,7 +92,7 @@
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
+								<span class="image main"><img src="images/headshot.jpg" alt="" /></span>
 								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
 							</article>
 
@@ -373,7 +373,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
 
 			</div>
