--- a/index.html
+++ b/index.html
@@ -85,7 +85,21 @@
 										</a>
 									</span>
 									<p>
-										Interactive data modeling of MLB players' salaries over the years. Based on percentiles.
+										Interactive data modeling of MLB players' salaries over the years. Based on percentiles. <br>
+										Please bear with the link. Heroku dashboards are slowwwwwww.
+									</p>
+								</article>
+							
+							<!-- Jupyter Notebooks -->
+								<article id="jupyter_notebooks">
+									<h2 class="major">First Neural Network</h2>
+									<span class="image main">
+										<a href="">
+											<img src="https://deepnote.com/project/793ebef0-25df-46a5-b3ad-aec0d41cd03f" alt="" />
+										</a>
+									</span>
+									<p>
+										The first basic neural network I ever made using Keras and TensorFlow libraries.
 									</p>
 								</article>
 
