--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		
+		<link rel="icon" />
 
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
@@ -69,10 +69,14 @@
 								
 								<!-- Jupyter Notebooks -->
 								<h2 class="major">Jupyter Notebooks</h2>
-								<span class="image main"><img src="images/jupyter_books/jupyter_example.jpg" alt="" /></span>
-								<p>
-									A collection of Jupyter Notebooks that I have created over the years
-								</p>
+								<span class="image main">
+									<p>
+										A collection of Jupyter Notebooks that I have created over the years
+									</p>
+									<a href="#jupyter_notebooks">
+										<img src="images/jupyter_books/jupyter_example.jpg" alt="" />
+									</a>
+								</span>
 
 							</article>
 
@@ -80,14 +84,14 @@
 								<article id="dashboards">
 									<h2 class="major">Interactive Baseball Data</h2>
 									<span class="image main">
+										<p>
+											Interactive data modeling of MLB players' salaries over the years. Based on percentiles. <br>
+											Please bear with the link. Heroku dashboards are slowwwwwww.
+										</p>
 										<a href="https://rocky-shelf-43279.herokuapp.com/">
 											<img src="images/baseball_data.jpg" alt="" />
 										</a>
 									</span>
-									<p>
-										Interactive data modeling of MLB players' salaries over the years. Based on percentiles. <br>
-										Please bear with the link. Heroku dashboards are slowwwwwww.
-									</p>
 								</article>
 							
 							<!-- Jupyter Notebooks -->
