--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 											Please bear with the link. Heroku dashboards are slowwwwwww.
 										</p>
 										<a href="https://rocky-shelf-43279.herokuapp.com/">
-											<img src="images/baseball_data.jpg" alt="" />
+											<img src="images/dashboards/baseball_data.jpg" alt="" />
 										</a>
 									</span>
 								</article>
