--- a/index.html
+++ b/index.html
@@ -44,16 +44,18 @@
 				<!-- Main -->
 					<div id="main">
 
-						<!-- Intro -->
-						<!-- 	<article id="intro">
-								<h2 class="major">Introduction</h2>
-								<span class="image main">
-									<img src="images/bentley.jpg" alt="" />
-								</span>
-								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+						<!-- About -->
+							<article id="about">
+								<h2 class="major">About</h2>
+								<span class="image main"><img src="images/headshot.jpg" alt="" /></span>
+								<p>
+									My name is Collin Fabian and I am student at Bentley University majoring in Data Analytics and minoring in Finance and General Business Studies. Using my analytical, mathematical and programming skills I am working towards a career in quantitative financial analysis.
+									<br>
+									<br>
+									I have always had a strong interest in the quantitative approach to financial analysis. Since I was in high school, I have always had this dream of coding a script that could make me money as I kick my feet up and watch. Through my coursework and personal intuition, 
+									I have developed a strong understanding of multiple methods of analyzing data as well as methods of machine learning. Throughout the "work" page you can explore various projects that I have done that employ these methods.
+								</p>
 							</article>
-						-->
 
 						<!-- Work -->
 							<article id="work">
@@ -107,13 +109,6 @@
 										The first basic neural network I ever made using Keras and TensorFlow libraries.
 									</p>
 								</article>
-
-						<!-- About -->
-							<article id="about">
-								<h2 class="major">About</h2>
-								<span class="image main"><img src="images/headshot.jpg" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
-							</article>
 
 						<!-- Contact -->
 							<article id="contact">
