--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
 							<article id="contact">
 								<h2 class="major">Contact</h2>
 								<p>
-									<a href="/download_files/resume.pdf" download="Fabian_resume">Resume</a>
-									<a href="www.linkedin.com/in/collin-fabian">LinkedIn</a>
-									<a href="https://github.com/CFabian88">GitHub</a>
+									<a href="/download_files/resume.pdf" download="Fabian_resume">Resume</a><br>
+									<a href="www.linkedin.com/in/collin-fabian">LinkedIn</a><br>
+									<a href="https://github.com/CFabian88">GitHub</a><br>
 								</p>
 								<ul class="icons">
 									<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
