--- a/index.html
+++ b/index.html
@@ -32,11 +32,9 @@
 						</div>
 						<nav>
 							<ul>
-								<!-- <li><a href="#intro">Intro</a></li> -->
 								<li><a href="#work">Work</a></li>
 								<li><a href="#about">About</a></li>
 								<li><a href="#contact">Contact</a></li>
-								<li><a href=""></a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
@@ -116,7 +114,7 @@
 								<h2 class="major">Contact</h2>
 								<p>
 									<a href="/download_files/resume.pdf" download="Fabian_resume">Resume</a><br>
-									<a href="www.linkedin.com/in/collin-fabian">LinkedIn</a><br>
+									<a href="https://linkedin.com/in/collin-fabian">LinkedIn</a><br>
 									<a href="https://github.com/CFabian88">GitHub</a><br>
 								</p>
 								<ul class="icons">
