--- a/index.html
+++ b/index.html
@@ -112,11 +112,11 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<h1>
+								<p style="font-size: 20px">
 									<a href="/download_files/resume.pdf" download="Fabian_resume">Resume</a><br>
 									<a href="https://linkedin.com/in/collin-fabian">LinkedIn</a><br>
 									<a href="https://github.com/CFabian88">GitHub</a><br>
-								</h1>
+								</p>
 								<ul class="icons">
 									<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
