--- a/index.html
+++ b/index.html
@@ -113,18 +113,18 @@
 							<article id="contact">
 								<h2 class="major">Contact</h2>
 								<p style="font-size: 20px">
-									Email
-								</p>
-								<p style="font-size: 12px">
-									Email: FABIAN_COLL@bentley.edu
+									Email<br>
+									<p style="font-size: 12px">
+										Email: FABIAN_COLL@bentley.edu
+									</p>
 								</p>
 								<p style="font-size: 20px">
-									Links
-								</p>
-								<p style="font-size: 12px">
-									<a href="/download_files/resume.pdf" download="Fabian_resume">Resume</a><br>
-									<a href="https://linkedin.com/in/collin-fabian">LinkedIn</a><br>
-									<a href="https://github.com/CFabian88">GitHub</a><br>
+									Links<br>
+									<p style="font-size: 12px">
+										<a href="/download_files/resume.pdf" download="Fabian_resume">Resume</a><br>
+										<a href="https://linkedin.com/in/collin-fabian">LinkedIn</a><br>
+										<a href="https://github.com/CFabian88">GitHub</a><br>
+									</p>
 								</p>
 								<ul class="icons">
 									<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
