--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 								<p style="font-size: 20px">
 									Email<br>
 									<p style="font-size: 12px">
-										Email: FABIAN_COLL@bentley.edu
+										FABIAN_COLL@bentley.edu
 									</p>
 								</p>
 								<p style="font-size: 20px">
