--- a/index.html
+++ b/index.html
@@ -113,13 +113,13 @@
 							<article id="contact">
 								<h2 class="major">Contact</h2>
 								<p style="font-size: 20px">
-									Email<br>
+									Email
 									<p style="font-size: 12px">
 										FABIAN_COLL@bentley.edu
 									</p>
 								</p>
 								<p style="font-size: 20px">
-									Links<br>
+									Links
 									<p style="font-size: 12px">
 										<a href="/download_files/resume.pdf" download="Fabian_resume">Resume</a><br>
 										<a href="https://linkedin.com/in/collin-fabian">LinkedIn</a><br>
