--- a/index.html
+++ b/index.html
@@ -113,14 +113,12 @@
 							<article id="contact">
 								<h2 class="major">Contact</h2>
 								<p style="font-size: 20px">
-									Email
-									<p style="font-size: 15px">
+									Email<p style="font-size: 15px">
 										FABIAN_COLL@bentley.edu
 									</p>
 								</p>
 								<p style="font-size: 20px">
-									Links
-									<p style="font-size: 15px">
+									Links<p style="font-size: 15px">
 										<a href="/download_files/resume.pdf" download="Fabian_resume">Resume</a><br>
 										<a href="https://linkedin.com/in/collin-fabian">LinkedIn</a><br>
 										<a href="https://github.com/CFabian88">GitHub</a><br>
