--- a/index.html
+++ b/index.html
@@ -128,6 +128,9 @@
 								<p>
 									Starbucks store finder. Finds stores based on user's input of either city/state or zip code.
 								</p>
+								<h2 class="major">
+									Mortgage Calculator
+								</h2>
 								<span>
 									<a href="#mortgage_calculator">
 										<img src="/images/python_scripts/mortgage.jpg" alt="">
@@ -306,7 +309,7 @@ main()
 									<p>
 										NOTE: To download the code, just click on the hyperlink "DOWNLOAD" below.
 									</p>
-									<a href="/download_files/python_scripts/mortgage_calculator.py" download="mortgage_calculator">
+									<a href="/download_files/python_scripts/mortgage_calculator.zip" download="mortgage_calculator">
 										DOWNLOAD
 									</a>
 									<pre class="prettyprint">
