--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@
 								<h2 class="major">
 									Mortgage Calculator
 								</h2>
-								<span>
+								<span class="image main">
 									<a href="#mortgage_calculator">
-										<img src="/images/python_scripts/mortgagee.jpg" alt="">
+										<img src="/images/python_scripts/mortgage.jpg" alt="">
 									</a>
 								</span>	
 								<p>
