--- a/index.html
+++ b/index.html
@@ -128,9 +128,7 @@
 								<p>
 									Starbucks store finder. Finds stores based on user's input of either city/state or zip code.
 								</p>
-								<h2 class="major">
-									Mortgage Calculator
-								</h2>
+								<h2 class="major">Mortgage Calculator</h2>
 								<span class="image main">
 									<a href="#mortgage_calculator">
 										<img src="/images/python_scripts/mortgage.jpg" alt="">
