--- a/index.html
+++ b/index.html
@@ -102,12 +102,12 @@
 								<article id="jupyter_notebooks">
 									<h2 class="major">First Neural Network</h2>
 									<span class="image main">
-										<a href="">
-											<img src="https://deepnote.com/project/793ebef0-25df-46a5-b3ad-aec0d41cd03f" alt="" />
+										<a href="https://deepnote.com/project/793ebef0-25df-46a5-b3ad-aec0d41cd03f">
+											<img src="/images/jupyter_books/first_neuralNetwork.jpg" alt="" />
 										</a>
 									</span>
 									<p>
-										The first basic neural network I ever made using Keras and TensorFlow libraries.
+										The first basic recurrent neural network I ever made using Keras and TensorFlow libraries.
 									</p>
 								</article>
 							
