--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 									</a>
 								</span>	
 								<p>
-									Uses user's input to calculate interest and principal payments per period for any given mortgage.
+									Uses user input to calculate interest and principal payments per period for any given mortgage.
 								</p>
 							</article>
 
