--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 								<article id="jupyter_notebooks">
 									<h2 class="major">First Neural Network</h2>
 									<span class="image main">
-										<a href="https://deepnote.com/project/793ebef0-25df-46a5-b3ad-aec0d41cd03f">
+										<a href="https://deepnote.com/project/da2f01f1-63e9-4a2f-8c60-75ed438ad660#%2Fneural_net.ipynb">
 											<img src="/images/jupyter_books/first_neuralNetwork.jpg" alt="" />
 										</a>
 									</span>
