--- a/index.html
+++ b/index.html
@@ -92,8 +92,22 @@
 											Interactive data modeling of MLB players' salaries over the years. Based on percentiles. <br>
 											Please bear with the link. Heroku dashboards are slowwwwwww.
 										</p>
-										<a href="https://rocky-shelf-43279.herokuapp.com/">
+										<a href="https://rocky-shelf-43279.herokuapp.com/" target="_blank">
 											<img src="images/dashboards/baseball_data.jpg" alt="" />
+										</a>
+									</span>
+
+									<h2 class="major">Stock Analysis With Partial Autocorrelation Function Tutorial</h2>
+									<span class="image main">
+										<p>
+											This dashboard allows a user to enter a stock ticker of their choosing. From there, the dashboard shows multiple models
+											describing price movements as well as other characteristics of the security. The user will be able to read along and make judgements
+											about the security. The user will also be able to use a partial autocorrelation function to determine if the security's previous price
+											movements are indicative of current movements. This dashboard is designed to diagnose whether a security is appropriate for using these
+											previous price movements to predict future ones.
+										</p>
+										<a href="https://murmuring-tundra-76715.herokuapp.com/" target="_blank">
+											<img src="/images/dashboards/stock_analysis.jpg" alt="">
 										</a>
 									</span>
 								</article>
@@ -102,7 +116,7 @@
 								<article id="jupyter_notebooks">
 									<h2 class="major">First Neural Network</h2>
 									<span class="image main">
-										<a href="https://deepnote.com/project/da2f01f1-63e9-4a2f-8c60-75ed438ad660#%2Fneural_net.ipynb">
+										<a href="https://deepnote.com/project/da2f01f1-63e9-4a2f-8c60-75ed438ad660#%2Fneural_net.ipynb" target="_blank">
 											<img src="/images/jupyter_books/first_neuralNetwork.jpg" alt="" />
 										</a>
 									</span>
@@ -553,8 +567,8 @@ if selection.lower() == 's':
 								<p style="font-size: 20px">
 									Links<p style="font-size: 15px">
 										<a href="/download_files/resume.pdf" download="Fabian_resume">Resume</a><br>
-										<a href="https://linkedin.com/in/collin-fabian">LinkedIn</a><br>
-										<a href="https://github.com/CFabian88">GitHub</a><br>
+										<a href="https://linkedin.com/in/collin-fabian" target="_blank">LinkedIn</a><br>
+										<a href="https://github.com/CFabian88" target="_blank">GitHub</a><br>
 									</p>
 								</p>
 								<ul class="icons">
