--- a/index.html
+++ b/index.html
@@ -102,9 +102,8 @@
 										<p>
 											This dashboard allows a user to enter a stock ticker of their choosing. From there, the dashboard shows multiple models
 											describing price movements as well as other characteristics of the security. The user will be able to read along and make judgements
-											about the security. The user will also be able to use a partial autocorrelation function to determine if the security's previous price
-											movements are indicative of current movements. This dashboard is designed to diagnose whether a security is appropriate for using these
-											previous price movements to predict future ones.
+											about the security. It is also designed to evaluate whether a stock's data is appropriate for using an autoregressive integrated 
+											moving average (ARIMA) model as a predictor for future price movements.
 										</p>
 										<a href="https://murmuring-tundra-76715.herokuapp.com/" target="_blank">
 											<img src="/images/dashboards/stock_analysis.jpg" alt="">
