--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
 										</a>
 									</span>
 
-									<h2 class="major">Stock Analysis With Partial Autocorrelation Function Tutorial</h2>
+									<h2 class="major">Stock Analysis With Partial</h2>
+									<h2 class="major">Autocorrelation Function Tutorial</h2>
 									<span class="image main">
 										<p>
 											This dashboard allows a user to enter a stock ticker of their choosing. From there, the dashboard shows multiple models
