--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="icon" class="fa fa-code-branch fa-2x">
+		<link rel="shortcut icon" type="image/png" href="images/icons/code-branch.png"/>
 		<link rel="icon" />
 
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
