--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="shortcut icon" type="image/x-icon" href="images/icons/code2.ico"/>
+		<link rel="shortcut icon" type="image/x-icon" href="images/icons/codefolder.ico"/>
 		<link rel="icon" />
 
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
