--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 									</a>
 								</span>
 
-								<h2 class="major">R Scriptssssssss</h2>
+								<h2 class="major">R Scripts</h2>
 								<span class="image main">
 									<p>
 										Data analyses done using R. All scripts are presented in R Markdown form.
