--- a/index.html
+++ b/index.html
@@ -2,12 +2,6 @@
 <html>
 	<head>
 		<script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js?lang=css&amp;skin=sunburst"></script>
-		<script src="jquery.js"></script>
-		<script> 
-			$(function(){
-			  $("#DivContent").load("noDoze.html"); 
-			});
-		</script> 
 		<title>Collin Fabian Work Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -584,7 +578,7 @@ if selection.lower() == 's':
 
 								<!-- R Scripts: NoDoze -->
 								<article id="noDoze">
-									<div id="DivContent"></div>
+									<embed type="text/html" src="r/noDoze.html">
 								</article>
 
 						<!-- Contact -->
