--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@ if selection.lower() == 's':
 
 								<!-- R Scripts: NoDoze -->
 								<article id="noDoze">
-									<embed type="text/html" src="r/noDoze.html">
+									<embed type="text/html" src="r/noDoze.html"  width="500" height="200">
 								</article>
 
 						<!-- Contact -->
