--- a/index.html
+++ b/index.html
@@ -574,11 +574,26 @@ if selection.lower() == 's':
 									In this analysis, we will look at a study done for a product called NoDoze on the reaction times of drivers.
 									This analysis is meant to show the reader an example of how to use very basic R commands for stastical summary purposes.
 								</p>
+								<h2 class="major">Randomization-Based Inference</h2>
+								<span class="image main">
+									<a href="#random_based">
+										<img src="/images/r_scripts/random_based.jpg" alt="" />
+									</a>
+								</span>
+								<p>
+									This analysis dives into average treatment effects of subjects in a survey experiment. 
+									A randomized-based inference will be used through simulation testing.
+								</p>
 							</article>
 
 								<!-- R Scripts: NoDoze -->
 								<article id="noDoze">
 									<embed type="text/html" src="r/noDoze.html"  width="575" height="2000">
+								</article>
+
+								<!-- R Scripts: Randomization-Based Inference -->
+								<article id="random_based">
+									<embed type="text/html" src="r/lab3.html"  width="575" height="2000">
 								</article>
 
 						<!-- Contact -->
