--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@ if selection.lower() == 's':
 								</p>
 								<p style="font-size: 20px">
 									Links<p style="font-size: 15px">
-										<a href="/download_files/resume.pdf" download="Fabian_resume">Resume</a><br>
+										<a href="/download_files/resume2.pdf" download="Fabian_resume">Resume</a><br>
 										<a href="https://linkedin.com/in/collin-fabian" target="_blank">LinkedIn</a><br>
 										<a href="https://github.com/CFabian88" target="_blank">GitHub</a><br>
 									</p>
