--- a/index.html
+++ b/index.html
@@ -584,6 +584,15 @@ if selection.lower() == 's':
 									This analysis dives into average treatment effects of subjects in a survey experiment. 
 									A randomized-based inference will be used through simulation testing.
 								</p>
+								<h2 class="major">KNN: Finding Optimal K</h2>
+								<span class="image main">
+									<a href="#knn_optimalK">
+										<img src="/images/r_scripts/knn_optimalK.jpg" alt="" />
+									</a>
+								</span>
+								<p>
+									Here I show how one can find the optimal K-value in a KNN test in order to minimize the mis-classification rate.
+								</p>
 							</article>
 
 								<!-- R Scripts: NoDoze -->
@@ -594,6 +603,11 @@ if selection.lower() == 's':
 								<!-- R Scripts: Randomization-Based Inference -->
 								<article id="random_based">
 									<embed type="text/html" src="r/lab3.html"  width="575" height="2000">
+								</article>
+
+								<!-- R Scripts: KNN - Finding Optimal K -->
+								<article id="knn_optimalK">
+									<embed type="text/html" src="r/knn_optimalK.html"  width="575" height="2000">
 								</article>
 
 						<!-- Contact -->
