--- a/index.html
+++ b/index.html
@@ -593,6 +593,16 @@ if selection.lower() == 's':
 								<p>
 									Here I show how one can find the optimal K-value in a KNN test in order to minimize the mis-classification rate.
 								</p>
+								<h2 class="major">Analytics Without Borders</h2>
+								<span class="image main">
+									<a href="https://github.com/CFabian88/COVID-Race-Income-Analysis">
+										<img src="/images/r_scripts/NoDoze.jpg" alt="" />
+									</a>
+								</span>
+								<p>
+									This project was performed at the Analytics Without Borders Conference in 2021. The analysis evaluates the links between
+									race and income on COVID-19 transmission and death rates in the United States.
+								</p>
 							</article>
 
 								<!-- R Scripts: NoDoze -->
