--- a/index.html
+++ b/index.html
@@ -92,6 +92,18 @@
 
 							<!-- Dashboards -->
 								<article id="dashboards">
+
+									<h2 class="major">PureDash (No Data)</h2>
+									<span class="image main">
+										<p>
+											Full-stack analytics dashboard created by myself. Only code is provided, with comapny-sensitive
+											data missing.
+										</p>
+										<a href="https://github.com/CFabian88/pure-solutions" target="_blank">
+											<img src="images/dashboards/baseball_data.jpg" alt="" />
+										</a>
+									</span>
+
 									<h2 class="major">Interactive Baseball Data</h2>
 									<span class="image main">
 										<p>
@@ -601,7 +613,7 @@ if selection.lower() == 's':
 								</span>
 								<p>
 									This project was performed at the Analytics Without Borders Conference in 2021. The analysis evaluates the links between
-									race and income on COVID-19 transmission and death rates in the United States.
+									race and income on COVID-19 transmission and death rates in the United 
 								</p>
 							</article>
 
